myapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: front-end
    custom: myapp
spec:
  containers:
    - name: myapp
      image: mandeepsu/newubuntu
