nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: front-end
spec:
  containers:
    - name: nginx
      image: nginx
