postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posgres-deployment
  labels:
    app: postgres
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      name: postgres-pod
      labels:
        app: back-end
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
