apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  labels:
    svc-label: apache
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
